# rose-xmgr

./: .gitignore  README-en.md  README.md  alembic.ini  config.py  main.py  pyproject.toml  ruff.toml
app/: dependencies.py
app/dashboard/: __init__.py
app/db/: base.py  crud.py  models.py
app/jobs/: reset_user_data_usage.py  review_users.py
app/models/: admin.py  node.py  proxy.py  user.py  user_template.py
app/routers/: __init__.py  admin.py  home.py  subscription.py  system.py  user.py  user_template.py
app/subscription/: share.py  singbox.py  v2ray.py
app/telegram/: __init__.py
app/utils/: helpers.py  jwt.py  notification.py  report.py
app/xray/: __init__.py  config.py  node.py  operations.py
cli/: admin.py  subscription.py  user.py
dashboard/: package.json  tsconfig.json
migrations/: env.py
migrations/versions/: 015cf1dc6eca_sub_updated_at_and_sub_last_user_agent.py  025d427831dd_sub_last_user_agent_length.py  08b381fc1bc7_update_shadowsocks_method.py  1ad79b97fdcf_.py  1cf7d159fdbb_add_online_at.py  21226bc711ac_add_threshold_to_notificationreminder.py  2313cdc30da3_.py  2b231de97dc3_add_use_sni_as_host_to_hosts.py  2ea33513efc0_noise_for_sqlite.py  305943d779c4_add_h3_to_alpn_enum.py  35f7f8fa9cf2_add_sub_revoked_at_to_users.py  37692c1c9715_nodes.py  470465472326_add_path_to_hosts.py  4f045f53bef8_drop_proxy_outbound_and_sockopt_from_.py  51e941ed9018_deactive_user_status.py  54c4b8c525fc_last_status_change_for_expired_users.py  (+19 more)
xmgr/: __init__.py  __main__.py  dependencies.py
xray_api/: __init__.py  exceptions.py  proxyman.py  stats.py
(+164 files in other folders)
