[project]
name = "rose-xmgr"
version = "1.0.0"
authors = [
    { name = "Nikita Zagoruyko", email = "nik.nightness@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "click>=8.2.1",
    "commentjson>=0.9.0",
    "cryptography>=45.0.6",
    "deprecated>=1.2.18",
    "fastapi>=0.116.1",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "jdatetime>=5.2.0",
    "jinja2>=3.1.6",
    "looseversion>=1.3.0",
    "passlib>=1.7.4",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "pyopenssl>=25.1.0",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "qrcode>=8.2",
    "requests>=2.32.4",
    "rpyc>=6.0.2",
    "sqlalchemy>=2.0.43",
    "typer>=0.16.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
